# emotiv-cortex-rs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/hooks/: hooks.json  rtk-rewrite.ps1
.github/skills/completion-finisher/: SKILL.md
.github/skills/core-fix-skill-docs/: SKILL.md
.github/skills/docs-freshness/: SKILL.md
.github/skills/meta-cognition-parallel/: SKILL.md
.github/skills/rust-daily/: SKILL.md
.github/skills/rust-learner/: SKILL.md
.github/skills/rust-refactor-helper/: SKILL.md
.github/skills/rust-router/: SKILL.md
.github/skills/rust-skill-creator/: SKILL.md
.github/workflows/: ci.yml  publish-dry-run.yml  quality-ratchet.yml  release.yml
crates/emotiv-cortex-cli/: Cargo.toml  README.md
crates/emotiv-cortex-cli/src/: app.rs  bridge.rs  event.rs  lsl.rs  main.rs
crates/emotiv-cortex-cli/src/commands/: core.rs  lsl_commands.rs  mod.rs  profiles.rs  records.rs  streams.rs  subjects.rs  training.rs
crates/emotiv-cortex-cli/src/ui/: dashboard.rs  help.rs  log.rs  lsl.rs  mod.rs  status_bar.rs  streams.rs  tabs.rs
crates/emotiv-cortex-tui/: Cargo.toml  README.md
crates/emotiv-cortex-tui/src/: app.rs  bridge.rs  event.rs  lsl.rs  main.rs  tui.rs
crates/emotiv-cortex-tui/src/ui/: dashboard.rs  device.rs  log.rs  mod.rs  status_bar.rs  streams.rs
crates/emotiv-cortex-v2/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cortex.toml.example
crates/emotiv-cortex-v2/docs/: api-parity.md  migration-0.2-to-0.3.md
crates/emotiv-cortex-v2/examples/: auth.rs  cortex_info.rs  eeg_data.rs  headsets.rs  mental_commands.rs  motion_data.rs  performance_metrics.rs  records.rs  resilient.rs
crates/emotiv-cortex-v2/src/: client.rs  config.rs  error.rs  headset.rs  health.rs  lib.rs  protocol.rs  reconnect.rs  retry.rs  streams.rs
crates/emotiv-cortex-v2/src/protocol/: auth.rs  constants.rs  headset.rs  mod.rs  profiles.rs  records.rs  rpc.rs  session.rs  streams.rs  subjects.rs  training.rs
crates/emotiv-cortex-v2/src/reconnect/: endpoints.rs  mod.rs  operation_layer.rs  reconnect_layer.rs  token_layer.rs
crates/emotiv-cortex-v2/tests/: client_transport.rs  endpoint_contracts.rs  live_smoke.rs  reconnect_behavior.rs
crates/emotiv-cortex-v2/tests/endpoint_contracts_suite/: assertions.rs  executors.rs  fixtures.rs  mod.rs
crates/emotiv-cortex-v2/tests/support/: mock_cortex.rs  mod.rs
docs/plans/: 2025-07-18-tui-dashboard-design.md
scripts/: install-emotiv-cortex-cli.ps1  install-emotiv-cortex-cli.sh  install-emotiv-cortex-tui.ps1  install-emotiv-cortex-tui.sh
