[package]
name = "emotiv-cortex-cli"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Interactive CLI explorer for the Emotiv Cortex v2 API"
repository = "https://github.com/jmduea/emotiv-cortex-rs"
homepage = "https://github.com/jmduea/emotiv-cortex-rs"
documentation = "https://docs.rs/emotiv-cortex-cli"
readme = "README.md"
keywords = ["emotiv", "cortex", "eeg", "cli", "bci"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "emotiv-cortex-cli"
path = "src/main.rs"

[features]
default = []
lsl = ["dep:lsl"]

[dependencies]

# Lab Streaming Layer (optional)
lsl = { version = "0.1", optional = true }
emotiv-cortex-v2 = { version = "=0.2.0", path = "../emotiv-cortex-v2" }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
colored = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
