[package]
name = "emotiv-cortex-cli"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Terminal UI dashboard for the Emotiv Cortex v2 API"
repository = "https://github.com/jmduea/emotiv-cortex-rs"
homepage = "https://github.com/jmduea/emotiv-cortex-rs"
documentation = "https://docs.rs/emotiv-cortex-cli"
readme = "README.md"
keywords = ["emotiv", "cortex", "eeg", "cli", "bci"]
categories = ["command-line-utilities", "science"]

[lints]
workspace = true

[[bin]]
name = "emotiv-cortex-cli"
path = "src/main.rs"

[features]
default = []
lsl = ["dep:lsl", "dep:libc"]

[dependencies]

emotiv-cortex-v2 = { version = "=0.3.0", path = "../emotiv-cortex-v2", default-features = false, features = [
    "rustls-tls",
    "config-toml",
] }

# Async runtime
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
    "sync",
] }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Serialization
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
# Lab Streaming Layer (optional; currently unsupported on Linux)
lsl = { version = "0.1", optional = true }
# Used to redirect stderr around liblsl's noisy C-level multicast warnings
libc = { version = "0.2", optional = true }
