[package]
name = "emotiv-cortex-v2"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Rust client for the Emotiv Cortex v2 WebSocket API"
repository = "https://github.com/jmduea/emotiv-cortex-rs"
homepage = "https://github.com/jmduea/emotiv-cortex-rs"
documentation = "https://docs.rs/emotiv-cortex-v2"
keywords = ["emotiv", "cortex", "eeg", "bci", "brain-computer-interface"]
categories = ["api-bindings", "science"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
native-tls = "0.2"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
