[package]
name = "emotiv-cortex-v2"
version = "0.3.3"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Rust client for the Emotiv Cortex v2 WebSocket API"
repository = "https://github.com/jmduea/emotiv-cortex-rs"
homepage = "https://github.com/jmduea/emotiv-cortex-rs"
documentation = "https://docs.rs/emotiv-cortex-v2"
# crates.io keywords must be < 20 characters (e.g. "bci" not "brain-computer-interface")
keywords = ["emotiv", "cortex", "eeg", "bci"]
categories = ["api-bindings", "science"]
readme = "README.md"
exclude = ["tests/", ".github/"]

[lints]
workspace = true

[features]
default = ["rustls-tls", "config-toml"]
rustls-tls = [
    "tokio-tungstenite/rustls-tls-webpki-roots",
    "dep:rustls",
    "dep:rustls-pki-types",
]
native-tls = ["tokio-tungstenite/native-tls", "dep:native-tls"]
config-toml = ["dep:toml"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = [
    "connect",
] }
native-tls = { version = "0.2", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pki-types = { version = "1", optional = true }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.9", optional = true }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
